Revert "fix(style): revert non-formatting changes"
This reverts commit 73466fcd7ae56dcb360adcac0bc5862e9fd18def.

Co-authored-by: unknowIfGuestInDream <57802425+unknowIfGuestInDream@users.noreply.github.com>